--- a/AspNetCoreIdentityApp.Web/appsettings.json
+++ b/AspNetCoreIdentityApp.Web/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Data Source=gizem\\SQLEXPRESS;Initial Catalog=IdentityDb;Integrated Security=True;Connect Timeout=30;Encrypt=True;Trust Server Certificate=True;Application Intent=ReadWrite;Multi Subnet Failover=False"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
